# autopilot-jobhunt-modified

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  SETUP.md  companies.json  config.example.json  conftest.py  pyproject.toml  requirements.txt  server.json  setup_cron.sh
.github/workflows/: ci.yml
deploy/systemd/: autopilot-jobhunt.service
docs/: 02-providers.md  03-api-keys.md  04-companies-and-scanning.md  05-integrations.md  07-config-and-scoring.md  08-troubleshooting.md  10-systemd.md  README.md
job_hunt/: drafter.py  llm_utils.py  log.py  log_tail.py  main.py  notifier.py  scanner.py  service.py
job_hunt/data/: companies.json  config.example.json  env_example  resume_template.md
resume/: YOUR_RESUME.md
skills/autopilot-jobhunt/: SKILL.md
tests/: test_config_precedence.py  test_llm_utils.py  test_main_cli.py  test_notifier.py  test_scan_output.py  test_scanner.py  test_service.py
